--- a/3D_Modeling.html
+++ b/3D_Modeling.html
@@ -26,7 +26,7 @@
   <body>
   
     <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
+      <div class="container-nav">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
