Photography + img Folder
Organized img folder, added Photography page

--- a/3D_Modeling.html
+++ b/3D_Modeling.html
@@ -40,7 +40,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#"><strong>3D Modeling</strong><span class="sr-only">(current)</span></a></li>
             <li><a href="Travel_Blog.html">Travel Blog</a></li>
-            <li><a href="#">Photography</a></li>
+            <li><a href="Photography.html">Photography</a></li>
           </ul>
           <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
@@ -62,7 +62,6 @@
     
     <div class="background">
       <div class="row"></div>
-      <br></br>
       <div class="row">
         <div class="col-sm-6">
           <div class="model-grp">
@@ -71,11 +70,11 @@
            <div class="button-grp">
               <div class="render-grp">
                 <div id="links1">
-                  <a href="img/Chess1.jpg" title="Chess1">
-                      <img src="img/thumbnails/Chess1.jpg" alt="Chess1" class="render-thumb">
+                  <a href="img/3d/Chess1.jpg" title="Chess1">
+                      <img src="img/3d/thumb/Chess1.jpg" alt="Chess1" class="render-thumb">
                   </a>
-                  <a href="img/Chess2.jpg" title="Chess2">
-                      <img src="img/thumbnails/Chess2.jpg" alt="Chess2" class="render-thumb">
+                  <a href="img/3d/Chess2.jpg" title="Chess2">
+                      <img src="img/3d/thumb/Chess2.jpg" alt="Chess2" class="render-thumb">
                   </a>
                 </div>
               </div>
@@ -90,14 +89,14 @@
             <div class="button-grp">
               <div class="render-grp">
                 <div id="links2">
-                  <a href="img/XWing.jpg" title="XWing">
-                      <img src="img/thumbnails/XWing.jpg" alt="XWing" class="render-thumb">
+                  <a href="img/3d/XWing.jpg" title="XWing">
+                      <img src="img/3d/thumb/XWing.jpg" alt="XWing" class="render-thumb">
                   </a>
-                  <a href="img/XWing2.jpg" title="XWing2">
-                      <img src="img/thumbnails/XWing2.jpg" alt="XWing2" class="render-thumb">
+                  <a href="img/3d/XWing2.jpg" title="XWing2">
+                      <img src="img/3d/thumb/XWing2.jpg" alt="XWing2" class="render-thumb">
                   </a>
-                  <a href="img/XWing3.jpg" title="XWing3">
-                      <img src="img/thumbnails/XWing3.jpg" alt="XWing3" class="render-thumb">
+                  <a href="img/3d/XWing3.jpg" title="XWing3">
+                      <img src="img/3d/thumb/XWing3.jpg" alt="XWing3" class="render-thumb">
                   </a>
                 </div>
               </div>
@@ -115,8 +114,8 @@
             <div class="button-grp">
               <div class="render-grp">
                 <div id="links3">
-                  <a href="img/Graphics.jpg" title="Graphics">
-                      <img src="img/thumbnails/Graphics.jpg" alt="Graphics" class="render-thumb">
+                  <a href="img/3d/Graphics.jpg" title="Graphics">
+                      <img src="img/3d/thumb/Graphics.jpg" alt="Graphics" class="render-thumb">
                   </a>
                 </div>
               </div>
@@ -131,11 +130,11 @@
             <div class="button-grp">
               <div class="render-grp">
                 <div id="links4">
-                  <a href="img/BusterSword.jpg" title="BusterSword">
-                      <img src="img/thumbnails/BusterSword.jpg" alt="BusterSword" class="render-thumb">
+                  <a href="img/3d/BusterSword.jpg" title="BusterSword">
+                      <img src="img/3d/thumb/BusterSword.jpg" alt="BusterSword" class="render-thumb">
                   </a>
-                  <a href="img/BusterSword2.jpg" title="BusterSword2">
-                      <img src="img/thumbnails/BusterSword2.jpg" alt="BusterSword2" class="render-thumb">
+                  <a href="img/3d/BusterSword2.jpg" title="BusterSword2">
+                      <img src="img/3d/thumb/BusterSword2.jpg" alt="BusterSword2" class="render-thumb">
                   </a>
                 </div>
               </div>
