Home Screen, Styling Changes

--- a/3D_Modeling.html
+++ b/3D_Modeling.html
@@ -38,6 +38,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
+            <li><a href="index.html" class="nav-home">Home</a></li>
             <li class="active"><a href="#"><strong>3D Modeling</strong><span class="sr-only">(current)</span></a></li>
             <li><a href="Travel_Blog.html">Travel Blog</a></li>
             <li><a href="Photography.html">Photography</a></li>
@@ -64,10 +65,10 @@
       <div class="row"></div>
       <div class="row">
         <div class="col-sm-6">
+          <div class="photography-top-bar"></div>
           <div class="model-grp">
             <iframe src="https://sketchfab.com/models/5dd1dbb87ef340e58970c35f083debc0/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
             <br>
-           <div class="button-grp">
               <div class="render-grp">
                 <div id="links1">
                   <a href="img/3d/Chess1.jpg" title="Chess1">
@@ -78,15 +79,13 @@
                   </a>
                 </div>
               </div>
-            </div>
           </div>
-          
         </div>
         <div class="col-sm-6">
+          <div class="photography-top-bar"></div>
           <div class="model-grp">
             <iframe src="https://sketchfab.com/models/75f04252ae1c41009062c41e31c925eb/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="" ></iframe>
             <br>
-            <div class="button-grp">
               <div class="render-grp">
                 <div id="links2">
                   <a href="img/3d/XWing.jpg" title="XWing">
@@ -100,7 +99,6 @@
                   </a>
                 </div>
               </div>
-            </div>
           </div>
         </div>
       </div>
@@ -108,10 +106,10 @@
       
       <div class="row">
         <div class="col-sm-6">
+          <div class="photography-top-bar"></div>
            <div class="model-grp">
             <iframe src="https://sketchfab.com/models/ac1f475616fd49e2abd91a9c2318432c/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
             <br>
-            <div class="button-grp">
               <div class="render-grp">
                 <div id="links3">
                   <a href="img/3d/Graphics.jpg" title="Graphics">
@@ -119,15 +117,14 @@
                   </a>
                 </div>
               </div>
-            </div>
           </div>
         </div>
 
         <div class="col-sm-6">
+          <div class="photography-top-bar"></div>
          <div class="model-grp">
             <iframe src="https://sketchfab.com/models/f80b44a331524258a49b1208cb412edf/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
             <br>
-            <div class="button-grp">
               <div class="render-grp">
                 <div id="links4">
                   <a href="img/3d/BusterSword.jpg" title="BusterSword">
@@ -138,7 +135,6 @@
                   </a>
                 </div>
               </div>
-            </div>
           </div>
         </div>
       </div>
