--- a/Photography.html
+++ b/Photography.html
@@ -40,6 +40,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
+            <li><a href="index.html" class="nav-home">Home</a></li>
             <li><a href="3D_Modeling.html">3D Modeling </a></li>
             <li><a href="Travel_Blog.html">Travel Blog </a></li>
             <li class="active"><a href="#"><strong>Photography</strong><span class="sr-only">(current)</span></a></li>
@@ -67,6 +68,7 @@
           <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                  <div class="col-sm-6">
+                 <div class="photography-top-bar"></div>
                   <div id="links" class="photography-gallery">
                     <h3 class="photography-title">Switzerland</h3>
                     <a href="img/photography/switz1.jpg" title="switz1">
@@ -79,8 +81,10 @@
                         <img src="img/photography/thumb/switz3.jpg" alt="switz3" class="photography-thumb">
                     </a>
                   </div>
+                  <div class="photography-bottom-bar"></div>
                  </div>
                   <div class="col-sm-6">
+                    <div class="photography-top-bar"></div>
                     <div id="links2" class="photography-gallery">
                       <h3 class="photography-title">Tahiti</h3>
                       <a href="img/photography/tahiti1.jpg" title="tahiti1">
@@ -96,6 +100,7 @@
                           <img src="img/photography/thumb/tahiti4.jpg" alt="tahiti4" class="photography-thumb">
                       </a>
                     </div>
+                     <div class="photography-bottom-bar"></div>
                  </div>
                   
               </div>
