--- a/Template.html
+++ b/Template.html
@@ -38,10 +38,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="3D_Modeling.html">3D Modeling </a></li>
-            <li><a href="3D_Modeling.html">Travel Blog </a></li>
-            <li><a href="#">Photography</a></li>
-            <li class="active"><a href="#"><strong>Page Title</strong><span class="sr-only">(current)</span></a></li>
+            <li><a href="index.html" class="nav-home">Home</a></li>
+            <li><a href="3D_Modeling.html">3D Modeling</a></li>
+            <li><a href="Travel_Blog.html">Travel Blog</a></li>
+            <li><a href="Photography.html">Photography</a></li>
           </ul>
           <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
