--- a/Travel_Blog.html
+++ b/Travel_Blog.html
@@ -38,6 +38,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
+            <li><a href="index.html" class="nav-home">Home</a></li>
             <li><a href="3D_Modeling.html">3D Modeling </a></li>
             <li class="active"><a href="#"><strong>Travel Blog</strong><span class="sr-only">(current)</span></a></li>
             <li><a href="Photography.html">Photography</a></li>
