--- a/Photography.html
+++ b/Photography.html
@@ -44,6 +44,7 @@
             <li><a href="3D_Modeling.html">3D Modeling </a></li>
             <li><a href="Travel_Blog.html">Travel Blog </a></li>
             <li class="active"><a href="#"><strong>Photography</strong><span class="sr-only">(current)</span></a></li>
+            <li><a href="About_Me.html">About Me</a></li>
           </ul>
           <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
@@ -70,7 +71,9 @@
                  <div class="col-sm-6">
                  <div class="photography-top-bar"></div>
                   <div id="links" class="photography-gallery">
-                    <h3 class="photography-title">Switzerland</h3>
+                    <div class="photography-title-bar">
+                      <h3 class="photography-title">Switzerland</h3>
+                    </div>
                     <a href="img/photography/switz1.jpg" title="switz1">
                         <img src="img/photography/thumb/switz1.jpg" alt="switz1" class="photography-thumb">
                     </a>
@@ -81,12 +84,17 @@
                         <img src="img/photography/thumb/switz3.jpg" alt="switz3" class="photography-thumb">
                     </a>
                   </div>
-                  <div class="photography-bottom-bar"></div>
+                  <div class="photography-bottom-bar">
+                    <a href="Album1.html" class="album-link">View Entire Album</a>
+                  </div>
                  </div>
+                 
                   <div class="col-sm-6">
                     <div class="photography-top-bar"></div>
                     <div id="links2" class="photography-gallery">
-                      <h3 class="photography-title">Tahiti</h3>
+                       <div class="photography-title-bar">
+                        <h3 class="photography-title">Tahiti</h3>
+                      </div>
                       <a href="img/photography/tahiti1.jpg" title="tahiti1">
                           <img src="img/photography/thumb/tahiti1.jpg" alt="tahiti1" class="photography-thumb">
                       </a>
@@ -100,7 +108,9 @@
                           <img src="img/photography/thumb/tahiti4.jpg" alt="tahiti4" class="photography-thumb">
                       </a>
                     </div>
-                     <div class="photography-bottom-bar"></div>
+                      <div class="photography-bottom-bar">
+                        <a href="Album2.html" class="album-link">View Entire Album</a>
+                      </div>
                  </div>
                   
               </div>
