--- a/About_Me.html
+++ b/About_Me.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Page Title</title>
+    <title>About Me</title>
 
 
     <!-- Bootstrap -->
@@ -38,11 +38,11 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#"><strong>Home</strong><span class="sr-only">(current)</span></a></li>
+            <li><a href="index.html" class="nav-home">Home</a></li>
             <li><a href="3D_Modeling.html">3D Modeling</a></li>
             <li><a href="Travel_Blog.html">Travel Blog</a></li>
             <li><a href="Photography.html">Photography</a></li>
-            <li><a href="About_Me.html">About Me</a></li>
+            <li class="active"><a href="#"><strong>About Me</strong><span class="sr-only">(current)</span></a></li>
           </ul>
           <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
@@ -59,7 +59,7 @@
     <div class="container" align=center>
     
       <div class="header" overflow:hidden; align=center>
-        <h1>Page Title</h1>
+        <h1>About Me</h1>
       </div>
       
        <!-- Main Content -->
