--- a/Template.html
+++ b/Template.html
@@ -42,6 +42,7 @@
             <li><a href="3D_Modeling.html">3D Modeling</a></li>
             <li><a href="Travel_Blog.html">Travel Blog</a></li>
             <li><a href="Photography.html">Photography</a></li>
+            <li><a href="About_Me.html">About Me</a></li>
           </ul>
           <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
